desenvolvendo o restante das sessions e div com conteúdos

--- a/landing_page.html
+++ b/landing_page.html
@@ -127,6 +127,76 @@
                 </div>
             </div>
         </section>
+        <section class="nossosClientes">
+            <div>
+                <h3>Nossos Clientes</h3>
+            </div>
+            <div>
+                <img src="images/clientes/econet.jpg">
+                <img src="images/clientes/fontes.jpg">
+                <img src="images/clientes/houston.jpg">
+                <img src="images/clientes/kia.jpg">
+                <img src="images/clientes/prefeitura_chapeco.jpg">
+                <img src="images/clientes/quest_inteligencia.jpg">
+                <img src="images/clientes/sidesc.jpg">
+            </div>
+        </section>
+        <section>
+            <div class="sistemaCall">
+                <h2 id="sistema">Sistema de call center completo! Aumente sua performance de atendimento.</h2>
+            </div>
+        </section>
+        <section>
+            <div class="servicos">
+                <div class="servico">
+                    <div class="servico-conteudo">
+                        <img src="images/positivo.png" alt="nuvem">
+                        <h3>
+                            Soluções que você pode confiar
+                        </h3>
+                        <p class="p-servicos">A iBridge atua no desenvolvimento de soluções de telecomunicações desde 2008 e hoje nossas soluções estão presentes em mais de 1,4 mil usuários em todo o território nacional.</p>
+                    </div>
+                </div>
+                <div class="servico">
+                    <div class="servico-conteudo">
+                        <img src="images/asc_grafico.png" alt="nuvem">
+                        <h3>
+                            Eficiência no DNA
+                        </h3>
+                        <p class="p-servicos">Reduzir custos de nossos clientes e ampliar a produtividade e o nível de satisfação da sua equipe são nossos objetivos. Levar mais eficiência aos processos está em nosso DNA.</p>
+                    </div>
+                </div>
+                <div class="servico">
+                    <div class="servico-conteudo">
+                        <img src="images/ideia.png" alt="nuvem">
+                        <h3>
+                            Inovação em atendimento
+                        </h3>
+                        <p class="p-servicos">A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="depoimentos">
+            <div class="depoimentos-content servicos">
+                <div id="cliente-depoimento" class="servico-conteudo servico border">
+                    <p class="p-servicos">A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos.</p>
+                    <div class="cliente-tag">
+                        <div class="align-right">
+                            <p class="nome-cliente">Gabriela Probst</p>
+                            <p>Gerente Operacional</p>
+                            <p>Espaço Telecom</p>
+                        </div>
+                        <div class="align-right">
+                            <img src="images/clientes/gabriela.png" class="avatar-depoimento">
+                        </div>
+                    </div>
+                </div>
+                <div class="servico-conteudo servico border">
+                    <p class="p-servicos">A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos.</p>
+                </div>
+            </div>
+        </section>
         <script src="assets/js/javascript.js"></script>
         <script src="https://kit.fontawesome.com/80c6527ebf.js" crossorigin="anonymous"></script>
     </body>
