desenvolvendo session de depoimentos Gabriela e Rafalel

--- a/landing_page.html
+++ b/landing_page.html
@@ -180,20 +180,30 @@
         <section id="depoimentos">
             <div class="depoimentos-content servicos">
                 <div id="cliente-depoimento" class="servico-conteudo servico border">
-                    <p class="p-servicos">A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos.</p>
-                    <div class="cliente-tag">
-                        <div class="align-right">
+                    <div><p class="p-servicos">A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos.</p></div>
+                    <div class="cliente-tag-gabriela">
+                        <div class="align-right content-left">
                             <p class="nome-cliente">Gabriela Probst</p>
                             <p>Gerente Operacional</p>
                             <p>Espaço Telecom</p>
                         </div>
-                        <div class="align-right">
+                        <div class="align-right ">
                             <img src="images/clientes/gabriela.png" class="avatar-depoimento">
                         </div>
                     </div>
                 </div>
-                <div class="servico-conteudo servico border">
-                    <p class="p-servicos">A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos.</p>
+                <div id="cliente-depoimento" class="servico-conteudo servico border">
+                    <div><p class="p-servicos">“O mercado automobilístico é muito exigente, e encontramos na iBridge um parceiro sólido, comprometido com nossos resultados e com um atendimento de excelência.”</p></div>
+                    <div class="cliente-tag-rafael">
+                        <div class="align-right content-left">
+                            <p class="nome-cliente">Rafael Nascimento</p>
+                            <p>Gerente de Projetos e Clientes</p>
+                            <p>Quest Inteligência</p>
+                        </div>
+                        <div class="align-right ">
+                            <img src="images/clientes/rafael.png" class="avatar-depoimento">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
