--- a/landing_page.html
+++ b/landing_page.html
@@ -132,13 +132,13 @@
                 <h3>Nossos Clientes</h3>
             </div>
             <div>
-                <img src="images/clientes/econet.jpg">
-                <img src="images/clientes/fontes.jpg">
-                <img src="images/clientes/houston.jpg">
-                <img src="images/clientes/kia.jpg">
-                <img src="images/clientes/prefeitura_chapeco.jpg">
-                <img src="images/clientes/quest_inteligencia.jpg">
-                <img src="images/clientes/sidesc.jpg">
+                <img src="images/clientes/econet.jpg" alt="logo econet">
+                <img src="images/clientes/fontes.jpg" alt="logo fontes">
+                <img src="images/clientes/houston.jpg" alt="logo houston">
+                <img src="images/clientes/kia.jpg" alt="logo kia">
+                <img src="images/clientes/prefeitura_chapeco.jpg" alt="logo prefeitura_chapeco">
+                <img src="images/clientes/quest_inteligencia.jpg" alt="logo quest_inteligencia">
+                <img src="images/clientes/sidesc.jpg" alt="logo sidesc">
             </div>
         </section>
         <section>
@@ -180,7 +180,7 @@
         <section id="depoimentos">
             <div class="depoimentos-content servicos">
                 <div id="cliente-depoimento" class="servico-conteudo servico border">
-                    <div><p class="p-servicos">A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos.</p></div>
+                    <div><p class="p-servicos">"A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos."</p></div>
                     <div class="cliente-tag-gabriela">
                         <div class="align-right content-left">
                             <p class="nome-cliente">Gabriela Probst</p>
@@ -188,7 +188,7 @@
                             <p>Espaço Telecom</p>
                         </div>
                         <div class="align-right ">
-                            <img src="images/clientes/gabriela.png" class="avatar-depoimento">
+                            <img src="images/clientes/gabriela.png" class="avatar-depoimento" alt="Avatar Gabriela Probst">
                         </div>
                     </div>
                 </div>
@@ -201,12 +201,44 @@
                             <p>Quest Inteligência</p>
                         </div>
                         <div class="align-right ">
-                            <img src="images/clientes/rafael.png" class="avatar-depoimento">
+                            <img src="images/clientes/rafael.png" class="avatar-depoimento" alt="Avatar Rafael Nascimento">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="nossosClientes">
+            <div>
+                <h3>Nossas integrações</h3>
+            </div>
+            <div>
+                <img src="images/integracoes/salesforce.png" alt="logo saleforce">
+                <img src="images/integracoes/exact.png" alt="logo exact">
+                <img src="images/integracoes/pipedrive.png" alt="logo pipedrive">
+                <img src="images/integracoes/microsoft.png" alt="logo microsoft">
+                <img src="images/integracoes/storm.png" alt="logo storm">
+            </div>
+            <div>
+                <img src="images/integracoes/bulldesk.png" alt="logo bulldesk">
+                <img src="images/integracoes/mautic.png" alt="logo mautic">
+                <img src="images/integracoes/bitrix.png" alt="logo bitrix">
+                <img src="images/integracoes/finaz.png" alt="logo finaz">
+                <img src="images/integracoes/rdstation-logo.png" alt="logo rdstation">
+            </div>
+        </section>
+        <section>
+            <div class="melhorar-performance">
+                <h1>Comece a melhorar sua performance</h1>
+            </div>            
+            <div class="box-btn melhorar-performance">
+                <a href="#inicio" class="btn-peca-demonstracao">
+                    Adquira agora nossa solução
+                </a>
+            </div>            
+        </section>
+        <footer>
+            <img src="images/ibridge-logo.png" alt="Logo fundo branco IBridge">
+        </footer>
         <script src="assets/js/javascript.js"></script>
         <script src="https://kit.fontawesome.com/80c6527ebf.js" crossorigin="anonymous"></script>
     </body>
