--- a/landing_page.html
+++ b/landing_page.html
@@ -178,8 +178,8 @@
             </div>
         </section>
         <section id="depoimentos">
-            <div class="depoimentos-content servicos">
-                <div id="cliente-depoimento" class="servico-conteudo servico border">
+            <div class="depoimentos-content">
+                <div class="servico-conteudo border">
                     <div><p class="p-servicos">"A iBridge ajuda empresas a inovar. Oferecemos uma melhor experiência em televendas e telecobrança para sua equipe e para seus clientes, automatizando seus processos."</p></div>
                     <div class="cliente-tag-gabriela">
                         <div class="align-right content-left">
@@ -187,12 +187,12 @@
                             <p>Gerente Operacional</p>
                             <p>Espaço Telecom</p>
                         </div>
-                        <div class="align-right ">
+                        <div class="align-right">
                             <img src="images/clientes/gabriela.png" class="avatar-depoimento" alt="Avatar Gabriela Probst">
                         </div>
                     </div>
                 </div>
-                <div id="cliente-depoimento" class="servico-conteudo servico border">
+                <div class="servico-conteudo border">
                     <div><p class="p-servicos">“O mercado automobilístico é muito exigente, e encontramos na iBridge um parceiro sólido, comprometido com nossos resultados e com um atendimento de excelência.”</p></div>
                     <div class="cliente-tag-rafael">
                         <div class="align-right content-left">
@@ -200,7 +200,7 @@
                             <p>Gerente de Projetos e Clientes</p>
                             <p>Quest Inteligência</p>
                         </div>
-                        <div class="align-right ">
+                        <div class="align-right">
                             <img src="images/clientes/rafael.png" class="avatar-depoimento" alt="Avatar Rafael Nascimento">
                         </div>
                     </div>
